# tiago_tutorials

tiago_pick/: README.md
tiago_pick/models/aruco_cube2/: aruco_cube2.sdf~  model.config
tiago_pick/models/aruco_cube2/meshes/: aruco_cube_5cm.dae~
tiago_pick/models/aruco_cube3/: aruco_cube3.sdf  model.config
tiago_pick/models/aruco_cube3/meshes/: aruco_cube_5cm.dae
tiago_pick/models/aruco_cube4/: aruco_cube4.sdf  model.config
tiago_pick/models/aruco_cube4/meshes/: aruco_cube_5cm.dae~
tiago_pick/models/aruco_cube5/: aruco_cube5.sdf~  model.config
tiago_pick/models/aruco_cube5/meshes/: aruco_cube_5cm.dae~
tiago_pick/models/aruco_cube6/: aruco_cube4.sdf~  model.config
tiago_pick/models/aruco_cube6/meshes/: aruco_cube_5cm.dae~
tiago_pick/models/open_box/: model.config  open_box.sdf
tiago_pick/tiago_pick_demo/: CMakeLists.txt  CMakeLists.txt~  package.xml
tiago_pick/tiago_pick_demo/action/: PickUpPose.action~
tiago_pick/tiago_pick_demo/config/: pick_and_place_params.yaml  pick_scene.yaml
tiago_pick/tiago_pick_demo/launch/: pick_demo.launch~  pick_simulation.launch  pick_simulation.launch~
tiago_pick/tiago_pick_demo/scripts/: pick_and_place_server.py~  pick_client.py  pick_client.py~
tiago_pick/tiago_pick_demo/worlds/: box_pack.world  box_pack_one_table.world  box_pack_with_tray.world  box_pack_with_tray2.world  pack_box.world~  tabletop_cube.world
tiago_pick/tiago_pick_msgs/: CMakeLists.txt  package.xml  package.xml~
tiago_pick/tiago_pick_msgs/msg/: BoxObject.msg  PickScene.msg  PickScene.msg~  PickUpPoseGoal.msg~
(+2 files in other folders)
