<package>
  <name>tiago_pick_msgs</name>
  <version>0.11.3</version>
  <description>
    This package defines messages for pick and place demo.</description>
  <license>BSD</license>
  <author email="glouie@us.fujitsu.com">Geoffrey Louie</author>
  <maintainer email="glouie@us.fujitsu.com">Geoffrey Louie</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


</package>
